<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fli.elogistic.driver.ui.fragments.PengirimanFragment"
    android:orientation="vertical"
    android:background="@color/loginBackground"
    android:id="@+id/layout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/bg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_copy_pod"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_16dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dokumen_pod"
        android:textSize="@dimen/txt_size_16sp"
        android:textColor="@color/veryDarkGrey"
        android:textStyle="bold"
        android:layout_margin="@dimen/dimen_16dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_pod"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp" />

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_data"
        android:gravity="center"
        android:visibility="gone"/>
</LinearLayout>