<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_rounded_rect_white"
    android:padding="@dimen/dimen_16dp">
    <TextView
        android:id="@+id/title_bottomsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/catatan"
        android:textColor="@color/veryDarkGrey"
        android:textStyle="bold"
        android:textSize="@dimen/txt_size_16sp"/>
    <ImageView
        android:layout_width="@dimen/dimen_20dp"
        android:layout_height="@dimen/dimen_20dp"
        android:id="@+id/btn_close_bottomsheet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_x"
        tools:ignore="ContentDescription" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/et_bottomsheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bottomsheet"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/greyFA"
        android:hint="@string/isi_catatan"
        android:gravity="top"
        android:padding="@dimen/dimen_8dp"
        android:inputType="textMultiLine"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        android:id="@+id/btn_simpan"
        android:background="@drawable/rounded_button_accent"
        app:layout_constraintTop_toBottomOf="@id/et_bottomsheet"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/simpan"
        android:textSize="@dimen/txt_size_16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>