<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fli.elogistic.driver.ui.activities.AccidentActivity"
    android:id="@+id/layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar">
        <ImageView
            android:id="@+id/bg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_24dp"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:src="@drawable/ic_chevronleft"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laporan_masalah"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/btn_back"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/laporkan_masalah_dalam_pengiriman_barang"
        android:textAllCaps="false"
        android:textSize="@dimen/dimen_16dp"
        android:textColor="@color/veryDarkGrey"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_below="@+id/toolbar"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yang_menyebabkan_pengiriman_terlambat"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_below="@+id/txt1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt2"
        android:layout_marginBottom="124dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/list_item"/>
            <EditText
                android:id="@+id/et_lainnya"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/rounded_rect_grey_darker"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:hint="@string/alasan_lainnya"
                android:padding="@dimen/dimen_8dp"
                android:textSize="@dimen/txt_size_14sp"
                android:maxLines="2"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:gravity="top"
                tools:ignore="Autofill"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/barang_bukti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/bukti_masalah"
                android:textColor="@color/veryDarkGrey"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/add_foto_barang_bukti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_8dp">

                <ImageView
                    android:id="@+id/camera_small_barang_bukti"
                    android:layout_width="40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/rounded_button_light_blue"
                    android:padding="@dimen/dimen_8dp"
                    android:src="@drawable/ic_camera"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_barang_bukti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/camera_big_barang_bukti"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:src="@drawable/ic_defaultphoto"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/loginBackground"
        android:id="@+id/v6"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_above="@+id/btn_kirim"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        android:id="@+id/btn_kirim"
        android:background="@drawable/rounded_button_accent"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/kirim"
        android:textSize="@dimen/txt_size_16sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>