<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context="com.fli.elogistic.driver.ui.activities.UploadPODActivity"
    android:id="@+id/layout">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:text="@string/upload_dokumen_pod"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_marginBottom="172dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_16dp">

            <TextView
                android:id="@+id/spinner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/tipe_dokumen"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/tipe_dokumen_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:background="@drawable/rounded_rect_grey_border"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingBottom="@dimen/dimen_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_title">

                <Spinner
                    android:id="@+id/tipe_dokumen_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:background="@color/transparent" />

                <ImageView
                    android:layout_width="@dimen/dimen_16dp"
                    android:layout_height="@dimen/dimen_16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_chevrondown"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/spinner_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/nama_lokasi"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/lokasi_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:background="@drawable/rounded_rect_grey_border"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingBottom="@dimen/dimen_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_title"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/lokasi_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:background="@color/transparent" />

                <ImageView
                    android:layout_width="@dimen/dimen_16dp"
                    android:layout_height="@dimen/dimen_16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_chevrondown"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:id="@+id/nama_dokumen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/nama_dokumen"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipe_dokumen_dropdown" />

            <EditText
                android:id="@+id/et_nama_dokumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:background="@drawable/rounded_rect_grey_border"
                android:hint="@string/max_character"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="2"
                android:padding="@dimen/dimen_12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nama_dokumen_title"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/catatan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/catatan"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_nama_dokumen"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/et_catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:background="@drawable/rounded_rect_grey_border"
                android:hint="@string/catatan"
                android:inputType="text"
                android:maxLength="120"
                android:maxLines="5"
                android:padding="@dimen/dimen_12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/catatan_title"
                tools:ignore="Autofill"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/btn_ambil_gambar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:background="@drawable/rounded_button_light_blue"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_8dp"
                app:layout_constraintTop_toBottomOf="@id/et_catatan">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_camera"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:gravity="center"
                    android:text="@string/ambil_gambar"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_ambil_gambar" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/dimen_24dp">

        <TextView
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@drawable/rounded_button_accent"
            android:gravity="center"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/simpan"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_batal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@drawable/rounded_button_secondary"
            android:gravity="center"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/batal"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>